Updated client integrations and docs
